fixed message resources

--- a/src/main/resources/consoleui_messages_de_DE.properties
+++ b/src/main/resources/consoleui_messages_de_DE.properties
@@ -1,3 +1,2 @@
-help=help
-help.list.all.options=Hilfe. Listet alle Optionen
+help.list.all.options=Hilfe. Listet alle Optionen.
 please.enter.a.valid.command=Bitte ein gültiges Kürzel eingeben.
